fix linkedin hover color and broken css

--- a/css/mav.css
+++ b/css/mav.css
@@ -183,4 +183,5 @@ img {
 }
 
 .linkedin-icon:hover {
-  color: #007FB2;
+  color: #0073B2;
+}
